--- a/tests/BeefProj.toml
+++ b/tests/BeefProj.toml
@@ -1,5 +1,5 @@
 FileVersion = 1
-Dependencies = {corlib = "*", gon-beef = "*"}
+Dependencies = {corlib = "*", corlib = "*", gon-beef = "*"}
 
 [Project]
 Name = "tests"
